cluster/apps/downloads/qbittorrent/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: qbittorrent
  namespace: downloads
spec:
  entryPoints:
    - websecure
  routes:
    - match: HOST(`qbittorrent.${SECRET_DOMAIN}`)
      kind: Rule
      middlewares:
        - name: internal-ipwhitelist
          namespace: traefik
      services:
        - name: qbittorrent
          port: 8080
  tls:
    secretName: ${SECRET_CERT}
