cluster/apps/downloads/qbittorrent/qbittorrent-ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: qbittorrent
  namespace: downloads
spec:
  entryPoints:
    - websecure
  routes:
    - match: HOST('qbittorrent.${SECRET_DOMAIN}`)
      kind: Rule
      services:
        - name: qbittorrent
          port: 80
  tls:
    secretName: ${SECRET_CERT}
